[gd_scene load_steps=2 format=2]

[ext_resource path="res://DialogManager/Editor/Editor.gd" type="Script" id=1]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlowChartTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlowChart*" type="Control" parent="FlowChartTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="tab_selected" from="FlowChartTabs" to="." method="_on_FlowChartTabs_tab_selected"]
